--- a/style.css
+++ b/style.css
@@ -37,6 +37,14 @@ body {
     justify-content: flex-start;
 }
 
+dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    height: 3em;
+}
+
 form {
     display: flex;
     justify-content: center;
