--- a/style.css
+++ b/style.css
@@ -41,7 +41,57 @@ body {
 
 /*this is all for the dialog pop up */
 
+.dialogBackdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
 
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+
+    transition: opacity 0.32\s ease-out, visability 0.3s ease-out;
+}
+
+.dialogBackdrop.open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.dialogHeader {
+    background-color: var(--nav-primary);
+    padding: 0.75em 1.5em;
+    border-bottom: 1px solid var(--nav-border);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--accent);
+}
+
+.closeBtn {
+    color: #9ca3af;
+    background: transparent;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 0.25em;
+    border-radius: 4px;
+    transition: all 0.3s;
+}
+
+.closeBtn:hover {
+    color: var(--accent);
+    background-color: rgba(192, 192, 192, 0.1);
+}
 
 dialog {
     position: absolute;
@@ -50,12 +100,24 @@ dialog {
     transform: translate(-50%, -50%);
     width: fit-content;
     height: fit-content;
-    padding: 3em;
 
     background-color: var(--book--primary);
     border: 1px solid var(--input-border);
     border-radius: 5px;
     box-shadow: 0px 8px 32px rgba(0,0,0,0.6);
+
+    animation: slideIn 0.3s ease-out;
+}
+
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translate(-50%, -65%);
+    }
+    to {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
 }
 
 form {
@@ -65,6 +127,7 @@ form {
     color: var(--accent);
     font-size: 1.5rem;
     gap: 1em;
+    padding: 3em;
 }
 
 label {
