--- a/style.css
+++ b/style.css
@@ -216,17 +216,20 @@ button {
 #output {
     margin: 15px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1.5fr));
     gap: 1em;
 }
 
 .book {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    height: 400px;
+    max-height: 400px;
     gap: 15px;
-    padding: 5px;
+    padding: 20px;
     background-color: var(--book--primary);
 }
 
@@ -234,12 +237,31 @@ p {
     color: var(--label-text);
 }
 
+.titleBox {
+    max-height: 40%;
+    max-width: 80%;
+    overflow: hidden;
+}
+
 .title {
     font-weight: 600;
     font-size: 2rem;
+    color: var(--label-text);
+    transition: none;
+    transform: translateY(0px);
+}
+
+.titleBox:hover .title {
+    transition: transform 2s ease;
+    transform: translateY(var(--title-scroll, 0px));
 }
 
 .author {
     font-weight: 500;
     font-size: 1.25rem;
+}
+
+.bookButtonsContainer {
+    display: flex;
+    gap: 10px;
 }
