--- a/style.css
+++ b/style.css
@@ -336,4 +336,12 @@ footer {
     object-fit: contain;
     filter: invert(1);
     transition: 0.2s;
+    width: 50px;
+    height: 50px;
+    transition: 0.5s;
+}
+
+#githubLogo:hover {
+    transform: scale(1.25);
+    transition: 0.5s;
 }
