--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     --button: #8b5cf6;
     --button-hover: #7c3aed;
 
+    font-family: 'Times New Roman', Times, serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 
