--- a/style.css
+++ b/style.css
@@ -41,10 +41,6 @@ header {
     gap: 5em;
 }
 
-h2 {
-    font-size: 1.25rem;
-}
-
 button {
     background-color: var(--button);
     color: var(--accent);
@@ -68,13 +64,14 @@ form {
     font-size: 1.5rem;
     gap: 1em;
     padding: 3em;
+    align-items: center;
 }
 
 label {
     display: block;
     color: var(--label-text);
     font-weight: 600;
-    font-size: 1.15rem;
+    font-size: 1.25rem;
 }
 
 input {
@@ -137,9 +134,19 @@ dialog {
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    gap: 0.25em;
+    gap: 0.65em;
     padding-bottom: 2em;
     padding-right: 2em;
+}
+
+.sortBtnContainer {
+    display: flex;
+    gap: 0.75em;
+    font-size: 12px;
+}
+
+.sortBtn {
+    font-size: 1rem;
 }
 
 .selectedSort { /* applied through DOM */
@@ -288,7 +295,7 @@ button:focus,
 #library {
     margin: 15px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, 300px);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1.5fr));
     gap: 1em;
     flex-grow: 1;
     align-content: flex-start;
@@ -376,6 +383,7 @@ button:focus,
     display: block;
     max-width: 50%;
     flex: 1;
+    font-size: 1rem;
 }
 
 #deleteBtn {
