--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ dialog {
 .headerLeft {
     display: flex;
     flex-direction: row;
-    gap: 3em;
+    gap: 2em;
     align-items: center;
     padding: 2em;
 }
@@ -391,4 +391,81 @@ button:focus,
     transition: 0.5s ease;
     border: 2px solid var(--button-hover);
     transform: translateY(-10px);
+}
+
+@media screen and (max-width: 1120px) {
+    header {
+        gap: 0;
+    }
+}
+
+@media screen and (max-width: 1036px) {
+    h1 {
+        width: 100px;
+    }
+
+    .headerRight {
+       padding-bottom: 2.45em; 
+    }
+}
+
+@media screen and (max-width: 920px) {
+    header {
+        gap: 0;
+        align-items: center;
+        padding: 1em;
+    }
+
+    .sortBtnContainer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .sortBtn {
+        font-size: 0.85rem;
+        padding: 0.5em 0.75em;
+    }
+
+    .headerLeft {
+        padding: 0;
+        align-self: flex-end;
+        padding-left: 1em;
+    }
+
+    .headerRight {
+        gap: 0;
+        padding-bottom: 0.5em;
+        padding-right: 1em;
+        align-self: flex-end;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    header {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+    .headerLeft {
+        flex-direction: column;
+        align-self: center;
+        gap: 0.5em;
+        padding-left: 0;
+    }
+
+    .headerRight {
+        align-self: center;
+        padding: 0.5em;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 1.5rem;
+        width: fit-content;
+    }
+
+    
 }
