--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ label {
     color: var(--label-text);
     font-weight: 600;
     font-size: 1.25rem;
+    white-space: nowrap;
+    width: 100%;
+    overflow: visible;
 }
 
 input {
@@ -224,6 +227,8 @@ dialog {
     display: flex;
     align-items: center;
     gap: 0.75rem;
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 .checkboxGroup>input {
@@ -238,6 +243,11 @@ dialog {
     font-weight: 600;
     cursor: pointer;
     font-size: 1.15rem;
+}
+
+#submit {
+    grid-column-start: 1;
+    grid-column-end: 2;
 }
 
 @keyframes slideIn {
